--- a/static/survey/css/style.css
+++ b/static/survey/css/style.css
@@ -117,7 +117,7 @@
 }
 .wrap-survey .title-block.green > span {
   color: #9abc3d;
-  vertical-align: center;
+  vertical-align: middle;
 }
 .wrap-survey .title-block.green.with-hand:before {
   width: 208px;
@@ -137,7 +137,7 @@
 .wrap-survey .title + .wrap-survey-question {
   margin-top: -40px;
 }
-.wrap-survey .wrap-survey .title-block + img {
+.wrap-survey .title-block + img {
   padding-left: 10%;
   display: inline-block;
   max-height: 200px;
@@ -294,13 +294,13 @@
   margin-top: 0;
 }
 
-.wrap-survey .wrap-survey .img-block {
+.wrap-survey .img-block {
   width: 150px;
   float: left;
   text-align: center;
   padding-top: 10px;
 }
-.wrap-survey .wrap-survey .img-block img {
+.wrap-survey .img-block img {
   max-width: 120px;
 }
 
